UI Alignment fix

--- a/dione-webapp/src/main/webapp/css/main.css
+++ b/dione-webapp/src/main/webapp/css/main.css
@@ -515,3 +515,6 @@ footer .bottom a{font-size:12px;color:#fff;}
 .addressBlurb	{ overflow:hidden;}
 .addressBlurb .photo	{ margin:0 15px 0 0;}
 .addressBlurb h5	{ color:orange; font-weight:bold;}	
+
+#loyalty .col-item	{ margin: 0 10px 10px 0;}
+#loyalty .info	{ height:150px; padding:10px;}
